k8s/development/api-deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infigrate-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: api
          imagePullPolicy: IfNotPresent
