k8s/development/postgres-storage-patch.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        resources:
          requests:
            storage: 2Gi
