k8s/development/api-route-patch.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infigrate-api
spec:
  hostnames:
    - api.dev.infigrate.local
